--- a/app/views/misc/home.html.erb
+++ b/app/views/misc/home.html.erb
@@ -13,5 +13,17 @@
   // Write your JS here.
   // Open the JS console and refresh the page to see the output.
 
+  /* function fizzbuzz() {
+    for (let i = 1; i < 101; i ++)
+    if (i % 15 === 0) {
+      console.log("fizzbuzz");
+    } else if (i % 5 === 0) {
+      console.log("buzz");
+    } else if (i % 3 === 0) {
+      console.log("fizz");
+    } else 
+      console.log(`${i}`)
+  }
+  */
   
 </script>
